Fix Firebase API key configuration

--- a/index.html
+++ b/index.html
@@ -1465,7 +1465,7 @@
     const DEFAULT_API_KEY = 'AIzaSyC7zk08wM1t1UCTkzzfdVO2RZ_Z4OnhDSg';
     const DEBUG_MODE = localStorage.getItem('debugMode') === 'true';
 
-    const FIREBASE_API_KEY = "AIzaSyDigVte9WexPsg8gOvJcsuVVO_FX-r__7o";
+    const FIREBASE_API_KEY = "AIzaSyDigVtE9WexPsg0gOvjcsuYVO_FX-r__7o";
 
     const firebaseConfig = {
       apiKey: FIREBASE_API_KEY,
@@ -1473,7 +1473,8 @@
       projectId: "interfaces-4bc20",
       storageBucket: "interfaces-4bc20.firebasestorage.app",
       messagingSenderId: "1007775332703",
-      appId: "1:1007775332703:web:d28af78317f63cfaa75eea"
+      appId: "1:1007775332703:web:d28af78317f63cfaa75eea",
+      measurementId: "G-2XGZ3JEY94"
     };
 
     if (!firebase.apps.length) {
