--- a/index.html
+++ b/index.html
@@ -2885,95 +2885,129 @@
       } else {
         payload.googleTTSKey = null;
       }
-      await firebase.firestore().collection('userSettings').doc(userId).set(payload, { merge: true });
+
+      try {
+        await firebase.firestore().collection('userSettings').doc(userId).set(payload, { merge: true });
+      } catch (error) {
+        console.warn('No se pudo guardar la API Key en Firestore', error);
+      }
     }
 
     async function getUserAPIKey(userId) {
-      const docRef = await firebase.firestore().collection('userSettings').doc(userId).get();
-      authLog('🔎 Consultando API key guardada', { userId, exists: docRef.exists });
-      if (docRef.exists) {
-        const data = docRef.data();
-        return data?.googleTTSKey || null;
+      try {
+        const docRef = await firebase.firestore().collection('userSettings').doc(userId).get();
+        authLog('🔎 Consultando API key guardada', { userId, exists: docRef.exists });
+        if (docRef.exists) {
+          const data = docRef.data();
+          return data?.googleTTSKey || null;
+        }
+      } catch (error) {
+        console.warn('No se pudo obtener la API Key desde Firestore', error);
       }
       return null;
     }
 
     async function ensureUserSettings(userId, email, fromSignup = false) {
-      const settingsRef = firebase.firestore().collection('userSettings').doc(userId);
-      const doc = await settingsRef.get();
-      if (doc.exists) {
-        authLog('⚙️ userSettings ya existe', { userId, fromSignup });
-        return doc.data();
+      try {
+        const settingsRef = firebase.firestore().collection('userSettings').doc(userId);
+        const doc = await settingsRef.get();
+        if (doc.exists) {
+          authLog('⚙️ userSettings ya existe', { userId, fromSignup });
+          return doc.data();
+        }
+        const payload = {
+          email: email || null,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp(),
+          updatedAt: firebase.firestore.FieldValue.serverTimestamp(),
+          onboardingCompleted: false
+        };
+        authLog('🛠️ Creando userSettings faltante', { userId, fromSignup });
+        await settingsRef.set(payload);
+        return payload;
+      } catch (error) {
+        console.warn('No se pudieron asegurar userSettings, continuando en local', error);
+        return null;
       }
-      const payload = {
-        email: email || null,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-        updatedAt: firebase.firestore.FieldValue.serverTimestamp(),
-        onboardingCompleted: false
-      };
-      authLog('🛠️ Creando userSettings faltante', { userId, fromSignup });
-      await settingsRef.set(payload);
-      return payload;
     }
 
     async function saveUserDocument(userId, docData) {
-      const docRef = await firebase.firestore().collection('documents').add({
-        userId,
-        title: docData.title,
-        text: docData.text,
-        voice: docData.voice || 'Selena',
-        speed: docData.speed || 1.0,
-        miniatura: docData.miniatura,
-        duracion: docData.duracion,
-        estado: docData.estado || 'todo',
-        favorito: !!docData.favorito,
-        posicionReproduccion: docData.posicionReproduccion || 0,
-        tipo: docData.tipo || 'texto',
-        createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-        updatedAt: firebase.firestore.FieldValue.serverTimestamp()
-      });
-      return docRef.id;
+      try {
+        const docRef = await firebase.firestore().collection('documents').add({
+          userId,
+          title: docData.title,
+          text: docData.text,
+          voice: docData.voice || 'Selena',
+          speed: docData.speed || 1.0,
+          miniatura: docData.miniatura,
+          duracion: docData.duracion,
+          estado: docData.estado || 'todo',
+          favorito: !!docData.favorito,
+          posicionReproduccion: docData.posicionReproduccion || 0,
+          tipo: docData.tipo || 'texto',
+          createdAt: firebase.firestore.FieldValue.serverTimestamp(),
+          updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+        return docRef.id;
+      } catch (error) {
+        console.warn('No se pudo guardar documento en Firestore', error);
+        return null;
+      }
     }
 
     async function loadUserDocuments(userId) {
-      authLog('📂 Descargando documentos de usuario', { userId });
-      const snapshot = await firebase.firestore()
-        .collection('documents')
-        .where('userId', '==', userId)
-        .orderBy('updatedAt', 'desc')
-        .get();
+      try {
+        authLog('📂 Descargando documentos de usuario', { userId });
+        const snapshot = await firebase.firestore()
+          .collection('documents')
+          .where('userId', '==', userId)
+          .orderBy('updatedAt', 'desc')
+          .get();
 
-      const documents = [];
-      snapshot.forEach((doc) => {
-        const data = doc.data();
-        documents.push({
-          id: doc.id,
-          userId,
-          titulo: data.title || data.titulo || 'Documento',
-          texto: data.text || data.texto || '',
-          vozSeleccionada: data.voice || data.voz || 'Sasha',
-          velocidad: data.speed || data.velocidad || 1.0,
-          duracion: data.duracion || calcularDuracion(data.text || data.texto || ''),
-          miniatura: data.miniatura || 'https://placehold.co/60x60/F5F5F5/666?text=📄',
-          estado: data.estado || 'todo',
-          favorito: !!data.favorito,
-          posicionReproduccion: data.posicionReproduccion || 0,
-          fecha: data.updatedAt?.toDate?.()?.toISOString?.() || new Date().toISOString(),
-          tipo: data.tipo || 'texto'
+        const documents = [];
+        snapshot.forEach((doc) => {
+          const data = doc.data();
+          documents.push({
+            id: doc.id,
+            userId,
+            titulo: data.title || data.titulo || 'Documento',
+            texto: data.text || data.texto || '',
+            vozSeleccionada: data.voice || data.voz || 'Sasha',
+            velocidad: data.speed || data.velocidad || 1.0,
+            duracion: data.duracion || calcularDuracion(data.text || data.texto || ''),
+            miniatura: data.miniatura || 'https://placehold.co/60x60/F5F5F5/666?text=📄',
+            estado: data.estado || 'todo',
+            favorito: !!data.favorito,
+            posicionReproduccion: data.posicionReproduccion || 0,
+            fecha: data.updatedAt?.toDate?.()?.toISOString?.() || new Date().toISOString(),
+            tipo: data.tipo || 'texto'
+          });
         });
-      });
 
-      authLog('📚 Documentos cargados', { total: documents.length });
-      return documents;
+        authLog('📚 Documentos cargados', { total: documents.length });
+        return documents;
+      } catch (error) {
+        console.warn('No se pudieron cargar documentos desde Firestore', error);
+        return [];
+      }
     }
 
     async function updateFirestoreDocument(id, updates) {
-      const payload = { ...updates, updatedAt: firebase.firestore.FieldValue.serverTimestamp() };
-      return firebase.firestore().collection('documents').doc(id).update(payload);
+      try {
+        const payload = { ...updates, updatedAt: firebase.firestore.FieldValue.serverTimestamp() };
+        return await firebase.firestore().collection('documents').doc(id).update(payload);
+      } catch (error) {
+        console.warn('No se pudo actualizar documento en Firestore', error);
+        return null;
+      }
     }
 
     async function deleteFirestoreDocument(id) {
-      return firebase.firestore().collection('documents').doc(id).delete();
+      try {
+        return await firebase.firestore().collection('documents').doc(id).delete();
+      } catch (error) {
+        console.warn('No se pudo eliminar documento en Firestore', error);
+        return null;
+      }
     }
 
     async function syncUserDocuments(userId) {
@@ -2995,14 +3029,8 @@
     }
 
     async function guardarDocumentoUsuario(doc) {
-      if (!currentUser || !currentUser.emailVerified) {
-        showLoginScreen('Inicia sesión y verifica tu email para guardar tus documentos');
-        mostrarPopupError('Inicia sesión para guardar y sincronizar tus audios');
-        return null;
-      }
-
       const docData = {
-        userId: currentUser.uid,
+        userId: currentUser?.uid || doc.userId || 'local',
         title: doc.titulo,
         text: doc.texto,
         voice: doc.vozSeleccionada || vozSeleccionada,
@@ -3015,13 +3043,29 @@
         tipo: doc.tipo || 'texto'
       };
 
-      const firestoreId = await saveUserDocument(currentUser.uid, docData);
-      const localDoc = { ...doc, id: firestoreId, userId: currentUser.uid };
+      let firestoreId = null;
+
+      if (currentUser?.emailVerified) {
+        try {
+          firestoreId = await saveUserDocument(currentUser.uid, docData);
+        } catch (error) {
+          console.warn('No se pudo guardar en Firestore, usando almacenamiento local', error);
+          mostrarPopupError('Guardado en la nube no disponible. Guardando en este dispositivo.');
+        }
+      }
+
+      const localDoc = { ...doc, id: firestoreId || doc.id || generateId(), userId: currentUser?.uid || doc.userId || 'local' };
       await addDocumento(localDoc);
-      documentos = await getDocumentos(currentUser.uid);
+      documentos = await getDocumentos(currentUser?.uid);
       renderDocumentos();
-      mostrarPopupExito('Documento guardado en tu cuenta');
-      return firestoreId;
+
+      if (firestoreId) {
+        mostrarPopupExito('Documento guardado en tu cuenta');
+      } else {
+        mostrarPopupExito('Documento guardado localmente');
+      }
+
+      return localDoc.id;
     }
 
     function setupAuthListeners() {
@@ -4470,9 +4514,33 @@
       fileSourceModal.style.display = 'block';
     }
 
+    function abrirSelectorArchivoLocalDirecto() {
+      const input = document.createElement('input');
+      input.type = 'file';
+      input.accept = '.pdf,.doc,.docx,.txt';
+      input.onchange = async (e) => {
+        const file = e.target.files?.[0];
+        if (!file) return;
+        await procesarArchivoSeleccionado(file);
+      };
+      input.click();
+    }
+
+    function abrirSelectorImagenLocalDirecto() {
+      const input = document.createElement('input');
+      input.type = 'file';
+      input.accept = 'image/*';
+      input.onchange = async (e) => {
+        const file = e.target.files?.[0];
+        if (!file) return;
+        await procesarImagenParaOCR(file);
+      };
+      input.click();
+    }
+
     async function handleAction(action) {
-      if (action === 'archivo') abrirSelectorArchivos();
-      if (action === 'escanear') imageInput.click();
+      if (action === 'archivo') abrirSelectorArchivoLocalDirecto();
+      if (action === 'escanear') abrirSelectorImagenLocalDirecto();
       if (action === 'url') {
         mostrarPopupInput('Ingresa la URL', 'https://ejemplo.com', async (url) => {
           const texto = await extraerTextoURL(url);
@@ -4494,7 +4562,7 @@
     pickFromDevice.addEventListener('click', () => {
       fileSourceModal.style.display = 'none';
       toggleOverlay(false);
-      fileInput.click();
+      abrirSelectorArchivoLocalDirecto();
     });
 
     pickFromDrive.addEventListener('click', () => {
@@ -4512,10 +4580,7 @@
       });
     });
 
-    fileInput.addEventListener('change', async (e) => {
-      const file = e.target.files[0];
-      if (!file) return;
-
+    async function procesarArchivoSeleccionado(file) {
       try {
         toggleLoader(true, 'Procesando archivo', file.name);
         let texto = '';
@@ -4548,14 +4613,17 @@
         console.error(error);
       } finally {
         toggleLoader(false);
-        fileInput.value = '';
+        if (fileInput) fileInput.value = '';
       }
-    });
+    }
 
-    imageInput.addEventListener('change', async (e) => {
+    fileInput.addEventListener('change', async (e) => {
       const file = e.target.files[0];
       if (!file) return;
+      await procesarArchivoSeleccionado(file);
+    });
 
+    async function procesarImagenParaOCR(file) {
       if (!file.type.startsWith('image/')) {
         mostrarPopupError('Por favor selecciona un archivo de imagen válido');
         return;
@@ -4619,8 +4687,14 @@
         mostrarPopupError(`Error al escanear: ${error.message}`);
         console.error(error);
       } finally {
-        imageInput.value = '';
+        if (imageInput) imageInput.value = '';
       }
+    }
+
+    imageInput.addEventListener('change', async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+      await procesarImagenParaOCR(file);
     });
 
     function generarMiniaturaTexto(texto) {
