Update Firebase configuration for Listen AI TTS

--- a/index.html
+++ b/index.html
@@ -1508,13 +1508,13 @@
     const GUEST_MODE_KEY = 'isGuestMode';
 
     const LEGACY_FIREBASE_CONFIG = {
-      apiKey: "AIzaSyDigVtE9WexPsg0gOvjcsuYVO_FX-r__7o",
-      authDomain: "interfaces-4bc20.firebaseapp.com",
-      projectId: "interfaces-4bc20",
-      storageBucket: "interfaces-4bc20.firebasestorage.app",
-      messagingSenderId: "1007775332703",
-      appId: "1:1007775332703:web:d28af78317f63cfaa75eea",
-      measurementId: "G-2XGZ3JEY94"
+      apiKey: "AIzaSyAsp5EL1SMvbD80F2bcJim9p62ceYwfgqc",
+      authDomain: "listen-ai-tts-app.firebaseapp.com",
+      projectId: "listen-ai-tts-app",
+      storageBucket: "listen-ai-tts-app.firebasestorage.app",
+      messagingSenderId: "135347023896",
+      appId: "1:135347023896:web:6e04b1499695fe358a936d",
+      measurementId: "G-NZ97696F1F"
     };
 
     const DEFAULT_FIREBASE_CONFIG = {
